math sans font fiddling

--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -37,7 +37,7 @@ THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\
 The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
 THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\
 }
-\textlb{
+\textmd{
 The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
 THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\
 }
@@ -61,6 +61,10 @@ THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\
 The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
 THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\
 }
+\textsf{\textbf{\\
+The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\
+}}
 \texttt{
 The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
 THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\
